@@ -149,7 +149,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SUDO 8"
-.TH SUDO 8 "March 12, 2005" "1.6.8p8" "MAINTENANCE COMMANDS"
+.TH SUDO 8 "June 20, 2005" "1.6.8p9" "MAINTENANCE COMMANDS"
 .SH "NAME"
 sudo, sudoedit \- execute a command as another user
 .SH "SYNOPSIS"
